--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <div class="wrapper">
     <div class="title"><h1>Simon's Game</h1></div>
 
-    <button>Start</button>
+    <button class="btn">Start</button>
 
 
     <div class="main-div">
-        <div class="square" style="background-color: green"></div>
+        <div id="green" class="square" style="background-color: green"></div>
         
-        <div class="square" style="background-color: red"></div>
+        <div id="red" class="square" style="background-color: red"></div>
         <br>
-        <div class="square" style="background-color: blue"></div>
-        <span style="width:50px;"></span>
-        <div class="square" style="background-color: yellow"></div>
+        <div id="blue" class="square" style="background-color: blue"></div>
+        <span  style="width:50px;"></span>
+        <div id="yellow" class="square" style="background-color: yellow"></div>
 
 
     </div>
-
+</div>
 
 
     <script src="script.js"></script>
