comentários, função timer e misc

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
     <div class="title"><h1>Simon's Game</h1></div>
 
-    <button class="btn">Start</button>
+    <button id="buttonStart">Start</button>
 
 
     <div class="main-div">
